# CppTraining

./: README.md
constructors_destructors_assignment/: CMakeLists.txt  artificial_abstract_class.cpp  artificial_abstract_class.hpp  delegate_constructor.cpp  delegate_constructor.hpp  main.cpp
different_strings/: CMakeLists.txt  cow_string.cpp  cow_string.hpp  main.cpp  sso_string.cpp  sso_string.hpp  sso_string_units.cpp
memory_managment/: CMakeLists.txt  int_cell.cpp  int_cell.hpp  int_cell_unit_tests.cpp  main.cpp  memory_pool.cpp  memory_pool.hpp  memory_pool_unit_tests.cpp  new_handler_support.hpp  pool_allocator.cpp  pool_allocator.hpp
